# acpx

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  PLAN.md  README.md  SPEC.md  _typos.toml  cliff.toml  deny.toml  devenv.nix  justfile
.github/actions/setup-rust/: action.yml
.github/workflows/: audit.yml  ci.yml  publish.yml
docs/: GETTING_STARTED.md  MAINTENANCE.md
examples/: cli.rs
scripts/: quality-gates.sh  ref-clone.sh  ref-copy.sh  release.sh  verify-release-tag.sh
src/: acpx.rs  agent_server.rs  agent_servers.rs  error.rs  lib.rs  registry.rs  runtime.rs
tests/: agent_server.rs  agent_servers.rs  connection.rs  fixture_agent.rs  registry.rs
tests/fixtures/: registry-sample.json
tests/support/: fixture_agent.rs  mod.rs
