[package]
name = "acpx"
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
description = "Simple Rust library and tooling for building on ACP."
license = "MIT"
repository = "https://github.com/imumesh18/acpx"
documentation = "https://docs.rs/acpx"
readme = "README.md"
keywords = ["acp", "agent-protocol", "client", "sdk"]
categories = ["api-bindings", "development-tools"]

[lib]
crate-type = ["lib"]

[dependencies]
agent-client-protocol = "0.10.2"
futures = "0.3.31"
thiserror = "2.0"

[dev-dependencies]
async-trait = "0.1"
tokio = { version = "1.48", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = "warn"
