[package]
name = "acpx"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Simple Rust library and tooling for building on ACP."
license = "MIT"
repository = "https://github.com/imumesh18/acpx"
documentation = "https://docs.rs/acpx"
readme = "README.md"
keywords = ["acp", "agent-protocol", "client", "sdk"]
categories = ["api-bindings", "development-tools"]

[lib]
crate-type = ["lib"]

[features]
registry-sync-bin = ["dep:serde", "dep:serde_json", "dep:ureq"]

[[bin]]
name = "registry-sync"
path = "src/bin/registry-sync.rs"
required-features = ["registry-sync-bin"]

[dependencies]
agent-client-protocol = "0.10.2"
async-process = "2.5.0"
async-trait = "0.1"
futures = "0.3.31"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
thiserror = "2.0"
ureq = { version = "2.12.1", optional = true }

[dev-dependencies]
tokio = { version = "1.48", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = "warn"
